# eos-contract-template

./: .gitignore  CMakeLists.txt  README.md  clean_build.sh  test.sh
.circleci/: config.yml
contract/: CMakeLists.txt  mycontract.cpp  mycontract.hpp
cpp/: hello_world.cpp
cpp/subfolder/: foo.cpp
include/: hello_world.hpp
include/subfolder/: foo.hpp
integration_test/: conntract_test.sh  docker-compose.yaml  dockerfile  package-lock.json  package.json
integration_test/features/: say_hi_to_somebody.feature
integration_test/features/step_definitions/: before_all.js  cleos.js  stepdefs.js
test/: hello_world_test.cpp
test/subfolder/: foo_test.cpp
